--- a/Portfolio.css
+++ b/Portfolio.css
@@ -6,9 +6,9 @@ html{
 
 body{
     
-    /*background-image: url("a5d79c8.jpg");*/
+    background-image: url("a5d79c8.jpg");
 
-    background-color: black;
+    /*background-color: black;*/
     margin-bottom: 100%;
 }
 
@@ -74,6 +74,11 @@ p{
     width: 2.15%;
 }
 
+#mouse:hover{
+    width: 2.2%;
+    left: 21.05%;
+}
+
 p#sections{
     color: white;
     font-size: 350%;
@@ -109,4 +114,80 @@ a:hover{
 a:active{
     color: darkgrey;
     text-decoration: none;
+}
+
+/*---------------------------------------------------*/
+
+#first {
+    width: 30%;
+    position: absolute;
+    left: 23.6%;
+    top: 22%;
+    font-size: 280%; 
+
+    color: white;
+}
+
+#first div {
+    position: relative;
+    width: fit-content;
+}
+
+#first div p {
+    opacity: 0;
+    animation: fade 0.01s ease-out 1.1s forwards;
+}
+
+#first div::after {
+    background-color: rgb(89,24,223);
+    display: block;
+    content: '';
+    position: absolute;
+    top: 22%;
+    height: 50%;
+    animation: swipe 1.5s ease-out 0.3s forwards;
+}
+
+.pSlide {
+    position: relative;
+    display: inline-block;
+}
+
+.pSlide::after {
+    content: "";
+    position: absolute;
+}
+
+.divSlide .pSlide::after {
+    transition: 0.5s ease all .3s;
+}
+
+.divSlide .pSlide::after {
+    width: 90%;
+    transition: 0.3s ease all;
+}
+
+@keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+   
+@keyframes swipe {
+    0% {
+     right: 110%;
+     left: 0;
+     width: 0%;
+    }
+
+    50% {
+     right: 0;
+     left: 0;
+     width: 110%;
+    }
+    
+    100% {
+     right: 0;
+     left: 110%;
+     width: 0%;
+    }
 }
