--- a/Sicurezza.css
+++ b/Sicurezza.css
@@ -154,3 +154,13 @@ h1{
   position: absolute;
   left: 42%;
 }
+
+img{
+  position: absolute;
+  top: 6%;
+  left: 3%;
+}
+
+img:hover{
+  transform: scale(1.1);
+}
